# Viral-Cast-AI-Final

./: DEPLOYMENT_GUIDE.md  README.md  TECHNICAL_ARCHITECTURE.md
viral-cast-ai-backend/: .env.example  .gitignore  BACKEND_DOCUMENTATION.md  Cargo.toml  Containerfile  Makefile  README.md  build.rs  compose.yml
viral-cast-ai-backend/.sqlx/: query-01a888144b753cc52e4632ac72b1e59129f65bf8749ff512208cf1f8e3f576ae.json  query-04397007514bee81da88a0c85d29b4a985291161d3092cdbd8c0b7b52629b286.json  query-06cddb3156c812605b6ed27eca37ed23bdc569f016c4da6eb2669b6388eb63a3.json  query-0700cccfd38debbcae761f5df2bbade77329237c8fb74dc49df5652d69b22783.json  query-09898432bc581ce3ae5fca784d6916b6ae89c7c53f02f7a8e6e9914df02c8425.json  query-0efd190a055900f3ffe2ae2ca4b0189c4e00f6b825497972fa8034942680ed72.json  query-0fb5a4eef0ef1a4729d15b814ed351a569724e3195e5936ef2463cd67ae41bf1.json  query-0fd7f60bb5a199abd14f43df9925a14f55a610955f327e0e7500bc2ca5a6c051.json  query-24377806d72c33627b8b2646dbd187a507d2b4489e0a256b4266bc3a3b48c8f9.json  query-24a4b0f661ac53c0a65df60e9562184b2ce0edea3fd7b66f9707d2b9b71d40ac.json  query-27cdb96662d25a7e9e54547a38181d6bc38541a5cc899132fb02a2285f12926c.json  query-2b1a69f4c8b40596fe696d165c07de5427345581331a40d6af3457294c600ddf.json  query-2b4a07bc0e3ee8954b775a0dc30c33510ad17f34f2509dbcb288e9c7f0c9c03a.json  query-34f0467e0b29c679364e6eb3cec95e7f0b39062d1564c1c23d67ea89ff51bf71.json  query-3b4b6cb9b39c16011dd8727e637ab13a07bd21fdfab68dd5bf7885982c78a2c5.json  query-3ccfb64669a17f41af0144c1ee1aa99e30a5a3d18b870c8cf10ff26dec2aeca4.json  query-3f81ba3699ba5b7e4b98c08d89635d46037c1bf52f76ee8137289dd91cba579f.json  query-4a3f8b0e9d1ade237ab666f875589e84781ddfedc2545a73f8dcb423d72ed8a3.json  query-4fd137c71cb89a7e6b349e7d28b2d7d0c7047ef89b669bf3479754f22070178f.json  query-5011e2826005a4b29a666f3422e467c47f65c0a8dd1ecca5dfbf09349623346f.json  query-52114c72d87d59b07b70a1a648005f4a78fed7951f6bf55e9b987e81cab95d0b.json  query-53930c205ef39c5e8a1dfe803c3207cd1f1154f8ca28a8e74abcda3e212f6e0e.json  query-54950b4b9c6180dd5525a064af771b16df4ca2618a26bc34dd5185b27a6be6bd.json  (+62 more)
viral-cast-ai-backend/data/: priorities.csv  regions.csv
(+508 files in other folders)
